<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView_restaurant"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainLayout_restaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view_colorRatingBar"
            android:layout_width="0dp"
            android:layout_height="@dimen/color_bar_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView_restaurantImage"
            android:layout_width="@dimen/restaurant_image_width"
            android:layout_height="@dimen/restaurant_image_height"
            android:contentDescription="@string/restaurant_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_colorRatingBar"
            app:srcCompat="@drawable/ic_restaurant_default" />

        <TextView
            android:id="@+id/textView_restaurantName"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:maxLines="2"
            android:text="@string/restaurant_name_dummy"
            android:textSize="@dimen/restaurant_name_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView_restaurantImage"
            app:layout_constraintTop_toTopOf="@+id/imageView_restaurantImage" />

        <RatingBar
            android:id="@+id/ratingBar_rating"
            style="@android:style/Widget.Material.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/imageView_restaurantImage"
            app:layout_constraintStart_toStartOf="@+id/imageView_restaurantImage"
            app:layout_constraintTop_toBottomOf="@+id/textView_rating" />

        <TextView
            android:id="@+id/textView_restaurantAddress"
            style="@android:style/Widget.Material.Light.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:text="@string/restaurant_address_dummy"
            android:textColor="@color/colorGreyDark"
            android:textSize="@dimen/restaurant_address_text_size"
            android:textStyle="italic"
            app:drawableStartCompat="@drawable/ic_location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView_restaurantName"
            app:layout_constraintTop_toBottomOf="@+id/textView_restaurantHighlights" />

        <TextView
            android:id="@+id/textView_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxLength="15"
            android:text="@string/rating_dummy"
            android:textSize="@dimen/restaurant_rating_text_size"
            app:layout_constraintEnd_toEndOf="@+id/ratingBar_rating"
            app:layout_constraintStart_toStartOf="@+id/ratingBar_rating"
            app:layout_constraintTop_toBottomOf="@+id/imageView_restaurantImage"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/textView_votes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxLength="20"
            android:paddingBottom="8dp"
            android:text="@string/votes_dummy"
            android:textSize="@dimen/restaurant_votes_text_size"
            app:layout_constraintEnd_toEndOf="@+id/ratingBar_rating"
            app:layout_constraintStart_toStartOf="@+id/ratingBar_rating"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar_rating" />

        <TextView
            android:id="@+id/textView_restaurantCuisines"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:maxLines="2"
            android:text="@string/restaurant_cuisines_dummy"
            android:textColor="@color/colorTeal_700"
            android:textSize="@dimen/restaurant_address_cuisines_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView_restaurantName"
            app:layout_constraintTop_toBottomOf="@+id/textView_restaurantName" />

        <TextView
            android:id="@+id/textView_restaurantHighlights"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:maxLines="4"
            android:text="@string/restaurant_highlights_dummy"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/restaurant_address_highlights_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView_restaurantAddress"
            app:layout_constraintTop_toBottomOf="@+id/textView_restaurantCuisines" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>